# agentlens

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
agentlens/: __init__.py  cli.py  report.py  report_html.py  runner.py
agentlens/evaluators/: base.py  context_drift.py  failure_modes.py  output_quality.py  step_efficiency.py  tool_accuracy.py
agentlens/ingest/: json.py
agentlens/judges/: __init__.py  anthropic.py  base.py
examples/: basic_usage.py  evals.yaml  evals_with_judge.yaml  sample_traces.jsonl
tests/: test_context_drift.py  test_evaluators.py  test_failure_modes.py  test_judges.py  test_langgraph_adapter.py  test_otel.py  test_output_quality.py  test_pydantic_ai_adapter.py  test_report_html.py  test_runner.py  test_runner_skip.py  test_schema.py  test_step_efficiency.py
tracecheck/: __init__.py  cli.py  report.py  report_html.py  runner.py  schema.py
tracecheck/adapters/: __init__.py  langgraph.py  pydantic_ai.py
tracecheck/evaluators/: base.py  context_drift.py  failure_modes.py  output_quality.py  step_efficiency.py  tool_accuracy.py
tracecheck/ingest/: json.py  otel.py
tracecheck/judges/: __init__.py  anthropic.py  base.py  fake.py
